# fullstack-remix

./: .gitignore  README.md  dev.back.Dockerfile  docker-compose.yml  front.fargate.Dockerfile  prod.back.fargate.Dockerfile
backend/: README.md  alembic.ini  pyproject.toml  settings.py  sqlalchemy_shell_setup.py  test.py
backend/alembic/versions/: V20231222__1_add_user_and_note_models.py  V20240108_1_add_user_auth_models.py  V20240108_2_add_expense_model.py  V20240113__1_add_user_relation.py  V20240224__1_add_user_and_expense_model.py  V20240224__2_add_expensses_logs_model.py  V20240224__3_add_invoice_and_invoice_log.py  V20240308__1_add_cascade_to_models.py
backend/app/: main.py
backend/app/config/: database.py  get_uses_entries.py  populate_db.py  users.py
backend/app/config/fixtures/: random_emails.txt  random_emails_r.txt  users_entires.json
backend/app/models/: __init__.py  base.py  expense_log_model.py  expense_model.py  invoice_log_model.py  invoice_model.py  note_model.py  user_model.py
backend/app/routers/: expense_log_router.py  expense_router.py  invoice_log_router.py  invoice_router.py  note_router.py
backend/app/schemas/: __init__.py  expense_log_schema.py  expense_schema.py  invoice_log_schema.py  invoice_schema.py  note_schemas.py  user_schema.py
backend/app/utils/: aws.py  custom_api_route.py  custom_csrf_middleware.py  request_exceptions.py  ws_manager.py
deploy/: fargate-backend.yml  fargate-frontend.yml  parameters.json  repository.yml
frontend/: .eslintrc.cjs  package-lock.json  package.json  server.js  tailwind.config.ts  (+1 more)
(+79 files in other folders)
