[tool.poetry]
name = "fullstack-remix"
version = "0.1.0"
description = ""
authors = ["Leno <akrachunov@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.104"
uvicorn = {extras = ["standard"], version = "^0.24"}
debugpy = "^1.8"
SQLAlchemy = "^2.0.23"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
alembic = "^1.12.1"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^12.1.2"}
sib-api-v3-sdk = "^7.6.0"
starlette-csrf = "^3.0.0"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
pgcli = "^4.0.1"
loguru = "^0.7.2"
mangum = "^0.17.0"
websockets = "^12.0"
boto3 = "^1.34"
fastapi-pagination = "^0.12.17"
logfire = {version = "^0.30.0", extras = ["fastapi", "sqlalchemy"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
